--- a/css/styles.css
+++ b/css/styles.css
@@ -44,13 +44,13 @@ a:hover {
     color: #001600;
 }
 
-.btn-success {
+.btn-basic {
     background-color: #001600;
     color: #fcfff0;
     border-color: #001600;
 }
 
-.btn-success:disabled {
+.btn-basic:disabled {
     border-color: #001600;
     background-color: transparent;
     cursor: not-allowed;
@@ -61,6 +61,13 @@ ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
+}
+
+.list-group-item {
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid #ededed;
+    background-color: transparent;
 }
 
 .cursor-pointer {
