--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ a:hover {
     border-color: #001600;
     background-color: transparent;
     cursor: not-allowed;
-    color: #001600;
+    color: #fcfff0;
 }
 
 ul {
