--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,10 @@ ul {
     color: #001600;
 }
 
+.nav-link.active {
+    background-color: transparent !important;
+}
+
 .breadcrumb .breadcrumb-item a {
     text-decoration: none;
     font-size: 0.875rem;
