--- a/css/styles.css
+++ b/css/styles.css
@@ -71,8 +71,28 @@ ul {
     background-color: transparent;
 }
 
+.list-group-item .img-wrapper {
+    height: 70px;
+    width: 70px;
+}
+
+.list-group-item:first-child .img-wrapper {
+    height: auto;
+    width: 50%;
+}
+
 .list-group-item:last-child {
     border-bottom: 0;
+}
+
+.list-group-item:first-child {
+    padding-top: 0;
+}
+
+.list-group-item img {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #001600;
 }
 
 .cursor-pointer {
