--- a/css/styles.css
+++ b/css/styles.css
@@ -298,6 +298,9 @@ ul {
 
 .search-container {
     position: sticky;
+    top: 0;
+    z-index: 10;
+    background-color: #fefef1;
 }
 
 .splash {
